test/Concurrency/attr_execution/nonisolated_nonsending_by_default.code
// RUN: %target-typecheck-verify-language -language-version 6 -enable-upcoming-feature NonisolatedNonsendingByDefault %s

// REQUIRES: language_feature_NonisolatedNonsendingByDefault

fn testCasts() {
  immutable defaultedType = (() async -> ()).this
  _ = defaultedType as (@concurrent () async -> ()).Type
  // expected-error@-1 {{cannot convert value of type '(nonisolated(nonsending) () async -> ()).Type' to type '(() async -> ()).Type' in coercion}}
  _ = defaultedType as (nonisolated(nonsending) () async -> ()).Type // Ok
}
